--- a/index.html
+++ b/index.html
@@ -4,46 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>To-Do List</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <script src="script.js"></script>
-
 </head>
 
 <body class="font-poppins box-border">
-    <div class="w-full min-h-screen  bg-gray-50 p-3 flex justify-center ">
-        <div
-            class="containe w-full sm:w-2/3 md:w-1/2 lg:w-1/3  bg-white flex flex-col justify-start items-center mb-24 mt-24 pt-10 pr-8 pb-16 pl-8 rounded-lg shadow-2xl">
+    <div class="w-full min-h-screen bg-gray-50 p-3 flex justify-center">
+        <div class="containe w-full sm:w-2/3 md:w-1/2 lg:w-1/3 bg-white flex flex-col justify-start items-center mb-24 mt-24 pt-10 pr-8 pb-16 pl-8 rounded-lg shadow-2xl">
+            <h2 class="flex items-center font-poppins text-2xl font-bold">To Do List <img class="size-10" src="./assests/img/icon.png"></h2>
 
-            <h2 class="flex items-center  font-poppins text-2xl font-bold">To Do List <img class="size-10 "
-                    src="./assests/img/icon.png">
-            </h2>
-
-            <div class="flex w-full gap-2 mb-4 my-10 ">
-                <input type="text" id="input-box" placeholder="Add your Text "
+            <div class="flex w-full gap-2 mb-4 my-10">
+                <input type="text" id="input-box" placeholder="Add your Text"
                     class="flex-1 px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-teal-500">
-
                 <button
-                    class="px-4 py-2 bg-teal-500 text-white rounded-md transform hover:scale-105 transition-all  hover:bg-teal-600 ease-in-out duration-200">Add</button>
+                    class="px-4 py-2 bg-teal-500 text-white rounded-md transform hover:scale-105 transition-all hover:bg-teal-600 ease-in-out duration-200" onclick="addTask()">Add</button>
             </div>
 
-            <ul class="space-y-2 my-4 w-full">
-
-                <li onclick="toggleCheck(this)"
-                    class="relative list-none text-[17px] pl-[50px] pr-10 py-3 select-none cursor-pointer container  bg-gray-100 rounded shadow-sm flex gap-2 transition-all duration-300">
-                    <span aria-hidden="true"
-                        class="absolute top-[12px] left-[8px] w-[28px] h-[28px] bg-center bg-cover rounded-full bg-[url('assets/img/unchecked.png')]"></span>
-                    Task 1
-                </li>
-
+            <ul class="space-y-2 my-4 w-full" id="list-container">
+                <!-- Dynamically added tasks will appear here -->
             </ul>
-
-
         </div>
-
     </div>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
